allprojects {
    group = 'com.easydeploy'
    version = '1.0.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    tasks.withType(JavaCompile).configureEach {
        options.release = 21
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs('--enable-native-access=ALL-UNNAMED')
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
    }

    test {
        useJUnitPlatform()
        jvmArgs('--enable-native-access=ALL-UNNAMED')
    }
}
